--- a/js/package.json
+++ b/js/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@types/react-plotly.js": "^2.5.2",
+    "moment": "^2.29.4",
     "plotly.js": "^2.16.3",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
@@ -24,11 +25,11 @@
     "react-dropzone": "^14.2.3",
     "react-plotly.js": "^2.6.0",
     "react-redux": "^8.0.5",
+    "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0"
