--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "d2i_patch"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 prpc-python = {extras = ["cli"], version = "^0.9.1"}
+pyyaml = "^6.0"
+jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1"
