Implement basic 'poly' app

--- a/python/tests/fixtures/example003.yaml
+++ b/python/tests/fixtures/example003.yaml
@@ -1,42 +1,34 @@
-# This is a very simple example with a chart and a form.
-
+name: Polynomial
 views:
-  - components:
-      - type: Paragraph
-        text: Plots a polynomial of the form ax^2 + bx + c
+- components:
+  - type: Paragraph
+    text: Plots a polynomial of the form ax^2 + bx + c
+  - type: NumberField
+    name: a
+    description: Coefficient a
+  - type: NumberField
+    name: b
+    description: Coefficient b
+  - type: NumberField
+    name: c
+    description: Coefficient c
+  - type: Button
+    text: Submit
+- components:
+  - type: Chart
+    code: |-
+      def polynomial(x, a, b, c):
+          return a*(x**2) + b*(x**1) + c
 
-      - type: NumberField
-        id: a
-        title: Coefficient a
+      from matplotlib import pyplot as plt
 
-      - type: NumberField
-        id: b
-        title: Coefficient b
+      def draw(a, b, c):
 
-      - type: NumberField
-        id: c
-        title: Coefficient c
+          x = tuple(range(-10, 10))
+          y = [polynomial(x, a, b, c) for x in x]
 
-      - type: Button
-        action: submit
-        text: Submit
-
-  - components:
-      - type: Chart
-        - generator: |
-            from matplotlib import pyplot as plt
-
-            def polynomial(x, a, b, c):
-                return a*(x**2) + b*x + c
-
-            def render(x, a, b, c):
-                fig = plt.figure()
-                ax = fig.add_subplot(1, 1, 1)
-                ax.plot(xdata1, ydata1, color='tab:blue')
-
-                x = tuple(range(-10, 10))
-                y = [polynomial(x, a, b, c) for x in x]
-
-                plt.plot(x, y)
-
-            render
+          fig = plt.figure()
+          ax = fig.add_subplot(1, 1, 1)
+          ax.plot(x, y, color='red')
+          return fig
+    function_name: draw
